@@ -17,9 +17,9 @@
 package org.apache.kafka.common.metrics;
 
 import org.apache.kafka.common.Reconfigurable;
+import org.apache.kafka.common.annotation.InterfaceAudience;
 import org.apache.kafka.common.config.ConfigException;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -29,6 +29,7 @@ import java.util.Set;
  * <p>
  * Implement {@link org.apache.kafka.common.ClusterResourceListener} to receive cluster metadata once it's available. Please see the class documentation for ClusterResourceListener for more information.
  */
+@InterfaceAudience.Public
 public interface MetricsReporter extends Reconfigurable, AutoCloseable {
 
     /**
@@ -56,7 +57,7 @@ public interface MetricsReporter extends Reconfigurable, AutoCloseable {
 
     // default methods for backwards compatibility with reporters that only implement Configurable
     default Set<String> reconfigurableConfigs() {
-        return Collections.emptySet();
+        return Set.of();
     }
 
     default void validateReconfiguration(Map<String, ?> configs) throws ConfigException {
