@@ -36,11 +36,11 @@ import org.apache.kafka.common.errors.LeaderNotAvailableException;
 import org.apache.kafka.common.errors.TimeoutException;
 import org.apache.kafka.common.errors.TopicExistsException;
 import org.apache.kafka.common.errors.UnknownTopicOrPartitionException;
-import org.apache.kafka.common.errors.UnsupportedVersionException;
+import org.apache.kafka.common.internals.UnsupportedProtocolFieldException;
 import org.apache.kafka.common.serialization.ByteArrayDeserializer;
-import org.apache.kafka.common.utils.LogContext;
 import org.apache.kafka.common.utils.Time;
 import org.apache.kafka.common.utils.Utils;
+import org.apache.kafka.common.utils.internals.LogContext;
 import org.apache.kafka.streams.StreamsConfig;
 import org.apache.kafka.streams.errors.StreamsException;
 import org.apache.kafka.streams.processor.internals.ClientUtils.QuietConsumerConfig;
@@ -159,12 +159,12 @@ public class InternalTopicManager {
         final Set<String> topicDescriptionsStillToValidate = new HashSet<>(topicConfigs.keySet());
         final Set<String> topicConfigsStillToValidate = new HashSet<>(topicConfigs.keySet());
         while (!topicDescriptionsStillToValidate.isEmpty() || !topicConfigsStillToValidate.isEmpty()) {
-            Map<String, KafkaFuture<TopicDescription>> descriptionsForTopic = Collections.emptyMap();
+            Map<String, KafkaFuture<TopicDescription>> descriptionsForTopic = Map.of();
             if (!topicDescriptionsStillToValidate.isEmpty()) {
                 final DescribeTopicsResult describeTopicsResult = adminClient.describeTopics(topicDescriptionsStillToValidate);
                 descriptionsForTopic = describeTopicsResult.topicNameValues();
             }
-            Map<String, KafkaFuture<Config>> configsForTopic = Collections.emptyMap();
+            Map<String, KafkaFuture<Config>> configsForTopic = Map.of();
             if (!topicConfigsStillToValidate.isEmpty()) {
                 final DescribeConfigsResult describeConfigsResult = adminClient.describeConfigs(
                     topicConfigsStillToValidate.stream()
@@ -575,17 +575,13 @@ public class InternalTopicManager {
                     log.error("Unexpected error during topic creation for {}.\n" +
                             "Error message was: {}", topicName, cause.toString());
 
-                    if (cause instanceof UnsupportedVersionException) {
-                        final String errorMessage = cause.getMessage();
-                        if (errorMessage != null &&
-                                errorMessage.startsWith("Creating topics with default partitions/replication factor are only supported in CreateTopicRequest version 4+")) {
-
-                            throw new StreamsException(String.format(
-                                    "Could not create topic %s, because brokers don't support configuration replication.factor=-1."
-                                            + " You can change the replication.factor config or upgrade your brokers to version 2.4 or newer to avoid this error.",
-                                    topicName)
-                            );
-                        }
+                    if (cause instanceof UnsupportedProtocolFieldException) {
+                        // An older broker rejected a field we rely on (e.g. the default
+                        // replication.factor=-1, which requires CreateTopics request version 4+).
+                        throw new StreamsException(String.format(
+                                "Could not create topic %s, because brokers don't support configuration replication.factor=-1."
+                                        + " You can change the replication.factor config or upgrade your brokers to version 2.4 or newer to avoid this error.",
+                                topicName), cause);
                     } else if (cause instanceof TimeoutException) {
                         log.error("Creating topic {} timed out.\n" +
                                 "Error message was: {}", topicName, cause.toString());
@@ -755,7 +751,7 @@ public class InternalTopicManager {
 
             processCreateTopicResults(createTopicsResult, topicStillToCreate, createdTopics, deadline);
 
-            maybeSleep(Collections.singletonList(topicStillToCreate), deadline, "created");
+            maybeSleep(List.of(topicStillToCreate), deadline, "created");
         }
 
         log.info("Completed setup of internal topics {}.", topicConfigs.keySet());
@@ -889,7 +885,7 @@ public class InternalTopicManager {
             }
 
             maybeSleep(
-                Collections.singletonList(topicsStillToCleanup),
+                List.of(topicsStillToCleanup),
                 deadline,
                 "validated"
             );
