@@ -25,6 +25,7 @@ import org.apache.kafka.streams.KeyValueTimestamp;
 import org.apache.kafka.streams.StreamsBuilder;
 import org.apache.kafka.streams.TestInputTopic;
 import org.apache.kafka.streams.TopologyTestDriver;
+import org.apache.kafka.streams.TopologyTestDriverBuilder;
 import org.apache.kafka.streams.kstream.Consumed;
 import org.apache.kafka.streams.kstream.EmitStrategy;
 import org.apache.kafka.streams.kstream.EmitStrategy.StrategyType;
@@ -49,7 +50,6 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Properties;
 import java.util.stream.Stream;
@@ -57,8 +57,6 @@ import java.util.stream.Stream;
 import static java.time.Duration.ofMillis;
 import static java.time.Instant.ofEpochMilli;
 import static java.util.Arrays.asList;
-import static org.hamcrest.CoreMatchers.equalTo;
-import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
@@ -82,18 +80,23 @@ public class TimeWindowedKStreamImplTest {
 
     public static Stream<Arguments> data() {
         return Stream.of(
-            Arguments.of(StrategyType.ON_WINDOW_UPDATE, true),
-            Arguments.of(StrategyType.ON_WINDOW_UPDATE, false),
-            Arguments.of(StrategyType.ON_WINDOW_CLOSE, true),
-            Arguments.of(StrategyType.ON_WINDOW_CLOSE, false)
+            Arguments.of(StrategyType.ON_WINDOW_UPDATE, true, false),
+            Arguments.of(StrategyType.ON_WINDOW_UPDATE, true, true),
+            Arguments.of(StrategyType.ON_WINDOW_UPDATE, false, false),
+            Arguments.of(StrategyType.ON_WINDOW_UPDATE, false, true),
+            Arguments.of(StrategyType.ON_WINDOW_CLOSE, true, false),
+            Arguments.of(StrategyType.ON_WINDOW_CLOSE, true, true),
+            Arguments.of(StrategyType.ON_WINDOW_CLOSE, false, false),
+            Arguments.of(StrategyType.ON_WINDOW_CLOSE, false, true)
         );
     }
 
-    public void setup(final StrategyType inputType, final boolean inputWithCache) {
+    public void setup(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
         type = inputType;
         withCache = inputWithCache;
         emitFinal = type.equals(StrategyType.ON_WINDOW_CLOSE);
         emitStrategy = StrategyType.forType(type);
+        StreamsTestUtils.maybeSetDslStoreFormatHeaders(props, withHeaders);
         final KStream<String, String> stream = builder.stream(TOPIC, Consumed.with(Serdes.String(), Serdes.String()));
         windowedStream = stream.groupByKey(Grouped.with(Serdes.String(), Serdes.String()))
             .windowedBy(TimeWindows.ofSizeWithNoGrace(ofMillis(500L)));
@@ -101,8 +104,8 @@ public class TimeWindowedKStreamImplTest {
 
     @ParameterizedTest
     @MethodSource("data")
-    public void shouldCountWindowed(final StrategyType inputType, final boolean inputWithCache) {
-        setup(inputType, inputWithCache);
+    public void shouldCountWindowed(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
+        setup(inputType, inputWithCache, withHeaders);
         final MockApiProcessorSupplier<Windowed<String>, Long, Void, Void> supplier = new MockApiProcessorSupplier<>();
         windowedStream
             .emitStrategy(emitStrategy)
@@ -110,7 +113,7 @@ public class TimeWindowedKStreamImplTest {
             .toStream()
             .process(supplier);
 
-        try (final TopologyTestDriver driver = new TopologyTestDriver(builder.build(), props)) {
+        try (final TopologyTestDriver driver = new TopologyTestDriverBuilder(builder.build()).withConfig(props).build()) {
             processData(driver);
         }
         final ArrayList<KeyValueTimestamp<Windowed<String>, Long>> processed = supplier.theCapturedProcessor().processed();
@@ -141,8 +144,8 @@ public class TimeWindowedKStreamImplTest {
 
     @ParameterizedTest
     @MethodSource("data")
-    public void shouldReduceWindowed(final StrategyType inputType, final boolean inputWithCache) {
-        setup(inputType, inputWithCache);
+    public void shouldReduceWindowed(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
+        setup(inputType, inputWithCache, withHeaders);
         final MockApiProcessorSupplier<Windowed<String>, String, Void, Void> supplier = new MockApiProcessorSupplier<>();
         windowedStream
             .emitStrategy(emitStrategy)
@@ -150,7 +153,7 @@ public class TimeWindowedKStreamImplTest {
             .toStream()
             .process(supplier);
 
-        try (final TopologyTestDriver driver = new TopologyTestDriver(builder.build(), props)) {
+        try (final TopologyTestDriver driver = new TopologyTestDriverBuilder(builder.build()).withConfig(props).build()) {
             processData(driver);
         }
 
@@ -181,8 +184,8 @@ public class TimeWindowedKStreamImplTest {
 
     @ParameterizedTest
     @MethodSource("data")
-    public void shouldAggregateWindowed(final StrategyType inputType, final boolean inputWithCache) {
-        setup(inputType, inputWithCache);
+    public void shouldAggregateWindowed(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
+        setup(inputType, inputWithCache, withHeaders);
         final MockApiProcessorSupplier<Windowed<String>, String, Void, Void> supplier = new MockApiProcessorSupplier<>();
         windowedStream
             .emitStrategy(emitStrategy)
@@ -193,7 +196,7 @@ public class TimeWindowedKStreamImplTest {
             .toStream()
             .process(supplier);
 
-        try (final TopologyTestDriver driver = new TopologyTestDriver(builder.build(), props)) {
+        try (final TopologyTestDriver driver = new TopologyTestDriverBuilder(builder.build()).withConfig(props).build()) {
             processData(driver);
         }
 
@@ -225,8 +228,8 @@ public class TimeWindowedKStreamImplTest {
 
     @ParameterizedTest
     @MethodSource("data")
-    public void shouldMaterializeCount(final StrategyType inputType, final boolean inputWithCache) {
-        setup(inputType, inputWithCache);
+    public void shouldMaterializeCount(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
+        setup(inputType, inputWithCache, withHeaders);
         windowedStream
             .emitStrategy(emitStrategy)
             .count(
@@ -234,7 +237,7 @@ public class TimeWindowedKStreamImplTest {
                     .withKeySerde(Serdes.String())
                     .withValueSerde(Serdes.Long())));
 
-        try (final TopologyTestDriver driver = new TopologyTestDriver(builder.build(), props)) {
+        try (final TopologyTestDriver driver = new TopologyTestDriverBuilder(builder.build()).withConfig(props).build()) {
             processData(driver);
             {
                 final WindowStore<String, Long> windowStore = driver.getWindowStore("count-store");
@@ -244,21 +247,24 @@ public class TimeWindowedKStreamImplTest {
                 if (withCache) {
                     // with cache returns all records (expired from underneath as well) as part of
                     // the merge process
-                    assertThat(data, equalTo(asList(
+                    assertEquals(
+                        List.of(
                             KeyValue.pair(new Windowed<>("1", new TimeWindow(0, 500)), 2L),
                             KeyValue.pair(new Windowed<>("1", new TimeWindow(500, 1000)), 1L),
                             KeyValue.pair(new Windowed<>("2", new TimeWindow(500, 1000)), 2L),
-                            KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), 1L))));
+                            KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), 1L)),
+                        data);
                 } else {
                     // without cache, we get only non-expired record from underlying store.
                     if (!emitFinal) {
-                        assertThat(data, equalTo(Collections.singletonList(
-                                KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), 1L))));
+                        assertEquals(List.of(KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), 1L)), data);
                     } else {
-                        assertThat(data, equalTo(asList(
+                        assertEquals(
+                            List.of(
                                 KeyValue.pair(new Windowed<>("1", new TimeWindow(500, 1000)), 1L),
                                 KeyValue.pair(new Windowed<>("2", new TimeWindow(500, 1000)), 2L),
-                                KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), 1L))));
+                                KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), 1L)),
+                            data);
                     }
                 }
             }
@@ -270,20 +276,25 @@ public class TimeWindowedKStreamImplTest {
 
                 // the same values and logic described above applies here as well.
                 if (withCache) {
-                    assertThat(data, equalTo(asList(
+                    assertEquals(
+                        List.of(
                             KeyValue.pair(new Windowed<>("1", new TimeWindow(0, 500)), ValueAndTimestamp.make(2L, 15L)),
                             KeyValue.pair(new Windowed<>("1", new TimeWindow(500, 1000)), ValueAndTimestamp.make(1L, 500L)),
                             KeyValue.pair(new Windowed<>("2", new TimeWindow(500, 1000)), ValueAndTimestamp.make(2L, 550L)),
-                            KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), ValueAndTimestamp.make(1L, 1000L)))));
+                            KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), ValueAndTimestamp.make(1L, 1000L))),
+                        data);
                 } else {
                     if (!emitFinal) {
-                        assertThat(data, equalTo(Collections.singletonList(
-                                KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), ValueAndTimestamp.make(1L, 1000L)))));
+                        assertEquals(
+                            List.of(KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), ValueAndTimestamp.make(1L, 1000L))),
+                            data);
                     } else {
-                        assertThat(data, equalTo(asList(
+                        assertEquals(
+                            List.of(
                                 KeyValue.pair(new Windowed<>("1", new TimeWindow(500, 1000)), ValueAndTimestamp.make(1L, 500L)),
                                 KeyValue.pair(new Windowed<>("2", new TimeWindow(500, 1000)), ValueAndTimestamp.make(2L, 550L)),
-                                KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), ValueAndTimestamp.make(1L, 1000L)))));
+                                KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), ValueAndTimestamp.make(1L, 1000L))),
+                            data);
                     }
                 }
             }
@@ -292,15 +303,15 @@ public class TimeWindowedKStreamImplTest {
 
     @ParameterizedTest
     @MethodSource("data")
-    public void shouldMaterializeReduced(final StrategyType inputType, final boolean inputWithCache) {
-        setup(inputType, inputWithCache);
+    public void shouldMaterializeReduced(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
+        setup(inputType, inputWithCache, withHeaders);
         windowedStream.reduce(
             MockReducer.STRING_ADDER,
             setMaterializedCache(Materialized.<String, String, WindowStore<Bytes, byte[]>>as("reduced")
                 .withKeySerde(Serdes.String())
                 .withValueSerde(Serdes.String())));
 
-        try (final TopologyTestDriver driver = new TopologyTestDriver(builder.build(), props)) {
+        try (final TopologyTestDriver driver = new TopologyTestDriverBuilder(builder.build()).withConfig(props).build()) {
             processData(driver);
             {
                 final WindowStore<String, String> windowStore = driver.getWindowStore("reduced");
@@ -310,16 +321,18 @@ public class TimeWindowedKStreamImplTest {
                 if (withCache) {
                     // with cache returns all records (expired from underneath as well) as part of
                     // the merge process
-                    assertThat(data, equalTo(asList(
+                    assertEquals(
+                        List.of(
                             KeyValue.pair(new Windowed<>("1", new TimeWindow(0, 500)), "1+2"),
                             KeyValue.pair(new Windowed<>("1", new TimeWindow(500, 1000)), "3"),
                             KeyValue.pair(new Windowed<>("2", new TimeWindow(500, 1000)), "10+20"),
-                            KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), "30"))));
+                            KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), "30")),
+                        data);
                 } else {
                     // without cache, we get only non-expired record from underlying store.
                     // actualFrom = observedStreamTime(1500) - retentionPeriod(1000) + 1 = 501.
                     // only 1 record is non expired and would be returned.
-                    assertThat(data, equalTo(Collections.singletonList(KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), "30"))));
+                    assertEquals(List.of(KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), "30")), data);
                 }
             }
             {
@@ -329,14 +342,17 @@ public class TimeWindowedKStreamImplTest {
 
                 // same logic/data as explained above.
                 if (withCache) {
-                    assertThat(data, equalTo(asList(
+                    assertEquals(
+                        List.of(
                             KeyValue.pair(new Windowed<>("1", new TimeWindow(0, 500)), ValueAndTimestamp.make("1+2", 15L)),
                             KeyValue.pair(new Windowed<>("1", new TimeWindow(500, 1000)), ValueAndTimestamp.make("3", 500L)),
                             KeyValue.pair(new Windowed<>("2", new TimeWindow(500, 1000)), ValueAndTimestamp.make("10+20", 550L)),
-                            KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), ValueAndTimestamp.make("30", 1000L)))));
+                            KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), ValueAndTimestamp.make("30", 1000L))),
+                        data);
                 } else {
-                    assertThat(data, equalTo(Collections.singletonList(
-                            KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), ValueAndTimestamp.make("30", 1000L)))));
+                    assertEquals(
+                        List.of(KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), ValueAndTimestamp.make("30", 1000L))),
+                        data);
                 }
             }
         }
@@ -344,8 +360,8 @@ public class TimeWindowedKStreamImplTest {
 
     @ParameterizedTest
     @MethodSource("data")
-    public void shouldMaterializeAggregated(final StrategyType inputType, final boolean inputWithCache) {
-        setup(inputType, inputWithCache);
+    public void shouldMaterializeAggregated(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
+        setup(inputType, inputWithCache, withHeaders);
         windowedStream.aggregate(
             MockInitializer.STRING_INIT,
             MockAggregator.TOSTRING_ADDER,
@@ -353,7 +369,7 @@ public class TimeWindowedKStreamImplTest {
                 .withKeySerde(Serdes.String())
                 .withValueSerde(Serdes.String())));
 
-        try (final TopologyTestDriver driver = new TopologyTestDriver(builder.build(), props)) {
+        try (final TopologyTestDriver driver = new TopologyTestDriverBuilder(builder.build()).withConfig(props).build()) {
             processData(driver);
             {
                 final WindowStore<String, String> windowStore = driver.getWindowStore("aggregated");
@@ -363,17 +379,18 @@ public class TimeWindowedKStreamImplTest {
                 if (withCache) {
                     // with cache returns all records (expired from underneath as well) as part of
                     // the merge process
-                    assertThat(data, equalTo(asList(
+                    assertEquals(
+                        List.of(
                             KeyValue.pair(new Windowed<>("1", new TimeWindow(0, 500)), "0+1+2"),
                             KeyValue.pair(new Windowed<>("1", new TimeWindow(500, 1000)), "0+3"),
                             KeyValue.pair(new Windowed<>("2", new TimeWindow(500, 1000)), "0+10+20"),
-                            KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), "0+30"))));
+                            KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), "0+30")),
+                        data);
                 } else {
                     // without cache, we get only non-expired record from underlying store.
                     // actualFrom = observedStreamTime(1500) - retentionPeriod(1000) + 1 = 501.
                     // only 1 record is non expired and would be returned.
-                    assertThat(data, equalTo(Collections
-                            .singletonList(KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), "0+30"))));
+                    assertEquals(List.of(KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), "0+30")), data);
                 }
             }
             {
@@ -381,14 +398,17 @@ public class TimeWindowedKStreamImplTest {
                 final List<KeyValue<Windowed<String>, ValueAndTimestamp<String>>> data =
                     StreamsTestUtils.toListAndCloseIterator(windowStore.fetch("1", "2", ofEpochMilli(0), ofEpochMilli(1000L)));
                 if (withCache) {
-                    assertThat(data, equalTo(asList(
+                    assertEquals(
+                        List.of(
                             KeyValue.pair(new Windowed<>("1", new TimeWindow(0, 500)), ValueAndTimestamp.make("0+1+2", 15L)),
                             KeyValue.pair(new Windowed<>("1", new TimeWindow(500, 1000)), ValueAndTimestamp.make("0+3", 500L)),
                             KeyValue.pair(new Windowed<>("2", new TimeWindow(500, 1000)), ValueAndTimestamp.make("0+10+20", 550L)),
-                            KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), ValueAndTimestamp.make("0+30", 1000L)))));
+                            KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), ValueAndTimestamp.make("0+30", 1000L))),
+                        data);
                 } else {
-                    assertThat(data, equalTo(Collections.singletonList(
-                            KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), ValueAndTimestamp.make("0+30", 1000L)))));
+                    assertEquals(
+                        List.of(KeyValue.pair(new Windowed<>("2", new TimeWindow(1000, 1500)), ValueAndTimestamp.make("0+30", 1000L))),
+                        data);
                 }
             }
         }
@@ -396,29 +416,29 @@ public class TimeWindowedKStreamImplTest {
 
     @ParameterizedTest
     @MethodSource("data")
-    public void shouldThrowNullPointerOnAggregateIfInitializerIsNull(final StrategyType inputType, final boolean inputWithCache) {
-        setup(inputType, inputWithCache);
+    public void shouldThrowNullPointerOnAggregateIfInitializerIsNull(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
+        setup(inputType, inputWithCache, withHeaders);
         assertThrows(NullPointerException.class, () -> windowedStream.aggregate(null, MockAggregator.TOSTRING_ADDER));
     }
 
     @ParameterizedTest
     @MethodSource("data")
-    public void shouldThrowNullPointerOnAggregateIfAggregatorIsNull(final StrategyType inputType, final boolean inputWithCache) {
-        setup(inputType, inputWithCache);
+    public void shouldThrowNullPointerOnAggregateIfAggregatorIsNull(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
+        setup(inputType, inputWithCache, withHeaders);
         assertThrows(NullPointerException.class, () -> windowedStream.aggregate(MockInitializer.STRING_INIT, null));
     }
 
     @ParameterizedTest
     @MethodSource("data")
-    public void shouldThrowNullPointerOnReduceIfReducerIsNull(final StrategyType inputType, final boolean inputWithCache) {
-        setup(inputType, inputWithCache);
+    public void shouldThrowNullPointerOnReduceIfReducerIsNull(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
+        setup(inputType, inputWithCache, withHeaders);
         assertThrows(NullPointerException.class, () -> windowedStream.reduce(null));
     }
 
     @ParameterizedTest
     @MethodSource("data")
-    public void shouldThrowNullPointerOnMaterializedAggregateIfInitializerIsNull(final StrategyType inputType, final boolean inputWithCache) {
-        setup(inputType, inputWithCache);
+    public void shouldThrowNullPointerOnMaterializedAggregateIfInitializerIsNull(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
+        setup(inputType, inputWithCache, withHeaders);
         assertThrows(NullPointerException.class, () -> windowedStream.aggregate(
             null,
             MockAggregator.TOSTRING_ADDER,
@@ -427,8 +447,8 @@ public class TimeWindowedKStreamImplTest {
 
     @ParameterizedTest
     @MethodSource("data")
-    public void shouldThrowNullPointerOnMaterializedAggregateIfAggregatorIsNull(final StrategyType inputType, final boolean inputWithCache) {
-        setup(inputType, inputWithCache);
+    public void shouldThrowNullPointerOnMaterializedAggregateIfAggregatorIsNull(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
+        setup(inputType, inputWithCache, withHeaders);
         assertThrows(NullPointerException.class, () -> windowedStream.aggregate(
             MockInitializer.STRING_INIT,
             null,
@@ -438,8 +458,8 @@ public class TimeWindowedKStreamImplTest {
     @SuppressWarnings("unchecked")
     @ParameterizedTest
     @MethodSource("data")
-    public void shouldThrowNullPointerOnMaterializedAggregateIfMaterializedIsNull(final StrategyType inputType, final boolean inputWithCache) {
-        setup(inputType, inputWithCache);
+    public void shouldThrowNullPointerOnMaterializedAggregateIfMaterializedIsNull(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
+        setup(inputType, inputWithCache, withHeaders);
         assertThrows(NullPointerException.class, () -> windowedStream.aggregate(
             MockInitializer.STRING_INIT,
             MockAggregator.TOSTRING_ADDER,
@@ -448,8 +468,8 @@ public class TimeWindowedKStreamImplTest {
 
     @ParameterizedTest
     @MethodSource("data")
-    public void shouldThrowNullPointerOnMaterializedReduceIfReducerIsNull(final StrategyType inputType, final boolean inputWithCache) {
-        setup(inputType, inputWithCache);
+    public void shouldThrowNullPointerOnMaterializedReduceIfReducerIsNull(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
+        setup(inputType, inputWithCache, withHeaders);
         assertThrows(NullPointerException.class, () -> windowedStream.reduce(
             null,
             setMaterializedCache(Materialized.as("store"))));
@@ -458,8 +478,8 @@ public class TimeWindowedKStreamImplTest {
     @ParameterizedTest
     @MethodSource("data")
     @SuppressWarnings("unchecked")
-    public void shouldThrowNullPointerOnMaterializedReduceIfMaterializedIsNull(final StrategyType inputType, final boolean inputWithCache) {
-        setup(inputType, inputWithCache);
+    public void shouldThrowNullPointerOnMaterializedReduceIfMaterializedIsNull(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
+        setup(inputType, inputWithCache, withHeaders);
         assertThrows(NullPointerException.class, () -> windowedStream.reduce(
             MockReducer.STRING_ADDER,
             (Materialized) null));
@@ -467,8 +487,8 @@ public class TimeWindowedKStreamImplTest {
 
     @ParameterizedTest
     @MethodSource("data")
-    public void shouldThrowNullPointerOnMaterializedReduceIfNamedIsNull(final StrategyType inputType, final boolean inputWithCache) {
-        setup(inputType, inputWithCache);
+    public void shouldThrowNullPointerOnMaterializedReduceIfNamedIsNull(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
+        setup(inputType, inputWithCache, withHeaders);
         assertThrows(NullPointerException.class, () -> windowedStream.reduce(
             MockReducer.STRING_ADDER,
             (Named) null));
@@ -476,8 +496,8 @@ public class TimeWindowedKStreamImplTest {
 
     @ParameterizedTest
     @MethodSource("data")
-    public void shouldThrowNullPointerOnCountIfMaterializedIsNull(final StrategyType inputType, final boolean inputWithCache) {
-        setup(inputType, inputWithCache);
+    public void shouldThrowNullPointerOnCountIfMaterializedIsNull(final StrategyType inputType, final boolean inputWithCache, final boolean withHeaders) {
+        setup(inputType, inputWithCache, withHeaders);
         assertThrows(NullPointerException.class, () -> windowedStream.count((Materialized<String, Long, WindowStore<Bytes, byte[]>>) null));
     }
 
